--- a/quh/src/configure.in
+++ b/quh/src/configure.in
@@ -161,6 +161,35 @@ st_configure_in_t configure_in[] = {
   {
     {NULL},
     {NULL},
+    {NULL},
+    "DESTDIR=\n",
+    NULL,
+    NULL,
+    NULL
+  },
+  {
+    {NULL},
+    {NULL},
+    {"/usr/local/bin", NULL},
+    "BINDIR=/usr/local/bin\n",
+    NULL,
+    NULL,
+    NULL
+  },
+  {
+    {NULL},
+    {NULL},
+    {"/usr/bin", NULL},
+    "ifndef BINDIR\n"
+    "BINDIR=/usr/bin\n"
+    "endif\n",
+    NULL,
+    NULL,
+    NULL
+  },
+  {
+    {NULL},
+    {NULL},
     {"/usr/bin/install", NULL},
     "INSTALL=/usr/bin/install -c\n"
     "INSTALL_PROGRAM=${INSTALL}\n"
