--- a/quh/src/configure.in
+++ b/quh/src/configure.in
@@ -318,6 +318,7 @@ st_configure_in_t configure_in[] = {
     NULL,
     NULL
   },
+#if 0
   {
     {NULL},
     {"arpa/inet.h", "netdb.h", "netinet/in.h", "sys/file.h", "sys/socket.h", NULL},
@@ -329,6 +330,8 @@ st_configure_in_t configure_in[] = {
     "*** could not find sys/socket.h and probably other files required for\n"
     "*** network use. Please report this to the developerof this package"
   },
+#endif
+#if 0
   {
     {NULL},
     {"linux/cdrom.h", "linux/iso_fs.h", NULL},
@@ -338,6 +341,7 @@ st_configure_in_t configure_in[] = {
     "CDDA (Linux) support..............   yes",
     "CDDA (Linux) support..............   no"
   },
+#endif
 #if TODO
   {
     {NULL},
@@ -444,6 +448,7 @@ st_configure_in_t configure_in[] = {
     "audiofile.........................   no"
   },
 #endif
+#if 0
   {
     {"libxmp.so", NULL},
     {NULL},
@@ -460,6 +465,7 @@ st_configure_in_t configure_in[] = {
     "*** it might be necessary to create a symbolic link from\n"
     "*** the installed libxmp.so.xyz to libxmp.so"
   },
+#endif
 #if TODO
   {
     {"libavutil.so",
@@ -480,6 +486,7 @@ st_configure_in_t configure_in[] = {
     "*** start again afterwards"
   },
 #endif
+#if 0
   {
     {"libst.a", "libmp3lame.so", NULL},
     {"st.h", NULL},
@@ -498,6 +505,7 @@ st_configure_in_t configure_in[] = {
     "*** realtime audio effects, on the other side, is cool...\n"
     "*** start again afterwards"
   },
+#endif
 #if TODO
   {
     {"libOpenSPC.so", NULL},
@@ -514,6 +522,7 @@ st_configure_in_t configure_in[] = {
     "*** start again afterwards"
   },
 #endif
+#if 0
   {
     {"libmikmod.so", NULL},
     {"mikmod.h", NULL},
@@ -524,6 +533,7 @@ st_configure_in_t configure_in[] = {
     "libmikmod (shared)................   yes",
     "libmikmod (shared)................   no"
   },
+#endif
 #if TODO
   {
     {"libwavpack.so", NULL},
@@ -605,7 +615,7 @@ st_configure_in_t configure_in[] = {
     "EsounD driver.....................   no"
   },
 #endif
-#if 1
+#if 0
   {
     {"libSDL.so", NULL},
     {"SDL/SDL.h", NULL},
