--- a/quh/src/Makefile
+++ b/quh/src/Makefile
@@ -14,7 +14,8 @@ OBJECTS=quh.o quh_misc.o quh_filter.o \
 	misc/file.o misc/filter.o misc/getopt.o misc/getopt2.o \
 	misc/misc.o misc/property.o misc/string.o misc/term.o \
 	filter/cache.o filter/console.o filter/decode.o filter/demux.o \
-	filter/raw.o filter/read.o filter/stdout.o filter/wav.o \
+	filter/raw.o filter/read.o filter/wav.o
+#       filter/stdout.o \
 #	filter/fade.o \
 #	filter/lyrics.o \
 #	filter/cdxa.o \
