*** empty log message ***

--- a/php_quh/apache/php_quh.conf
+++ b/php_quh/apache/php_quh.conf
@@ -3,7 +3,8 @@
   DocumentRoot /htdocs/php_quh/htdocs
   Alias /images /htdocs/php_quh/htdocs/images
   Alias /incoming /htdocs/php_quh/htdocs/incoming
-  php_admin_value open_basedir /htdocs/php_quh/htdocs:/tmp/:/usr/share/php
+  Alias /misc /htdocs/php_quh/htdocs/misc
+  php_admin_value open_basedir /htdocs/php_quh/htdocs:/tmp/:/usr/share/php:/htdocs/php_quh/htdocs/incoming
   php_admin_flag safe_mode On
   AddDefaultCharset off
 </VirtualHost>
