--- a/quh/src/configure.in
+++ b/quh/src/configure.in
@@ -408,16 +408,18 @@ st_configure_in_t configure_in[] = {
     "FLAC support......................   no"
   },
 #endif
+#if 0
   {
     {"libopenal.so", NULL},
     {"AL/al.h", NULL},
     {NULL},
     "USE_AL=1\n"
-    "LDFLAGS+=-lAL\n",
+    "LDFLAGS+=-lopenal\n",
     "#define USE_AL\n",
     "openal support....................   yes",
     "openal support....................   no"
   },
+#endif
 #if 0
   {
     {"libmac.so", NULL},
