--- a/quh/src/Makefile
+++ b/quh/src/Makefile
@@ -9,10 +9,10 @@ include config.mak
 
 LINK_COMPILER=$(CC)
 TARGET=quh
-OBJECTS=quh.o quh_misc.o quh_filter.o cache.o \
+OBJECTS=quh.o quh_misc.o quh_filter.o cache.o filter.o \
 	misc/base64.o \
-	misc/file.o misc/filter.o misc/getopt.o misc/getopt2.o \
-	misc/misc.o misc/property.o misc/string.o misc/term.o \
+	misc/file.o misc/getopt.o misc/getopt2.o \
+	misc/misc.o misc/property.o misc/string.o \
 	filter/console.o filter/decode.o filter/demux.o \
 	filter/raw.o filter/read.o filter/wav.o \
 	filter/stdout.o
